# mlbv-rs

./: .gitignore  Cargo.toml  README.md  config_template.toml
.github/workflows/: CI.yml  release.yml
src/: cli.rs  config.rs  gamedata.rs  lib.rs  main.rs  player.rs  session.rs  streams.rs  teamdata.rs  teams.rs
src/api/: mod.rs  session.rs
src/api/mediagateway/: schema.rs  streams.rs
src/api/mediagateway/queries/: content_search.gql  init_playback_session.gql
src/api/stats/: schedule.rs  schema.rs
src/cli/: args.rs  display.rs  mod.rs
src/config/: config.rs  mod.rs  template.toml
src/data/: mod.rs  teamdata.rs
src/queries/: init_session.gql
tests/: cli_mode.rs
