[package]
name = "mlbv-rs"
version = "0.1.0"
edition = "2024"
authors = ["Tom Cole <mlbv_project@fastmail.com>"]
license = "GPL-3.0-only"
description = "Command-line interface for MLB.tv and MLB Stats API"
repository = "https://github.com/eephuss/mlbv-rs"
homepage = "https://github.com/eephuss/mlbv-rs"
readme = "README.md"
keywords = ["mlb", "cli", "streaming", "sports"]
categories = ["command-line-utilities", "multimedia"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "mlbv"
path = "src/main.rs"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22.26"
anyhow = "1.0"
tokio = { version = "1.47.1", features = ["full"]}
reqwest = {version = "0.12.23", features = ["json"]} 
serde_json = "1.0.145"
chrono = "0.4.42"
oauth2 = "5.0.0"
regex = "1.11.3"
unescaper = "0.1.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.50", features = ["derive"] }
tabled = "0.20.0"
rpassword = "7.3.1"

[workspace.metadata.dist]
targets = [
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]
installers = ["shell", "powershell"]
ci = ["github"]
